# kalman_filter

./: impreso_PFM01.doc
code/cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  kalman_filter.cpp  kalman_filter.dis  kalman_filter.elf  kalman_filter.elf.map  kalman_filter.hex  kalman_filter.uf2
code/cpp/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake  elf2uf2
code/cpp/elf2uf2/boot_uf2_headers/: Makefile
code/cpp/lib/: CMakeLists.txt  Makefile  cmake_install.cmake
code/cpp/lib/EKF/: CMakeLists.txt  EKF.cpp  EKF.h  cmake_install.cmake
code/cpp/lib/IMU/: CMakeLists.txt  IMU.cpp  IMU.h  Makefile
code/cpp/lib/TCF/: CMakeLists.txt  Makefile  TCF.cpp  TCF.h
code/cpp/lib/attitude/: CMakeLists.txt  attitude.h
code/cpp/lib/matrix_operations/: CMakeLists.txt  matrix_operations.cpp  matrix_operations.h
code/cpp/pico-sdk/: Makefile  cmake_install.cmake
code/cpp/pico-sdk/docs/: Makefile  cmake_install.cmake
code/cpp/pico-sdk/src/: Makefile  cmake_install.cmake
code/cpp/pico-sdk/src/common/: Makefile  cmake_install.cmake
code/cpp/pico-sdk/src/common/boot_picoboot/: Makefile  cmake_install.cmake
code/cpp/pico-sdk/src/common/boot_uf2/: Makefile  cmake_install.cmake
code/cpp/pico-sdk/src/common/pico_base/: Makefile  cmake_install.cmake
code/cpp/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
code/cpp/pico-sdk/src/common/pico_bit_ops/: Makefile  cmake_install.cmake
code/cpp/pico-sdk/src/common/pico_divider/: Makefile  cmake_install.cmake
code/cpp/pico-sdk/src/common/pico_stdlib/: Makefile  cmake_install.cmake
code/cpp/pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
code/cpp/pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
code/cpp/pico-sdk/src/common/pico_util/: Makefile  cmake_install.cmake
code/cpp/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
code/cpp/pico-sdk/src/rp2040/hardware_regs/: Makefile  cmake_install.cmake
code/cpp/pico-sdk/src/rp2040/hardware_structs/: Makefile  cmake_install.cmake
code/cpp/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
code/cpp/pico-sdk/src/rp2_common/boot_stage2/: Makefile  bs2_default_padded_checksummed.S  cmake_install.cmake
code/cpp/pico-sdk/src/rp2_common/cmsis/: Makefile  cmake_install.cmake
code/cpp/pico-sdk/src/rp2_common/hardware_adc/: Makefile  cmake_install.cmake
code/cpp/pico-sdk/src/rp2_common/hardware_base/: Makefile  cmake_install.cmake
code/cpp/pico-sdk/src/rp2_common/hardware_claim/: Makefile  cmake_install.cmake
code/cpp/pico-sdk/src/rp2_common/hardware_clocks/: Makefile  cmake_install.cmake
code/cpp/pico-sdk/src/rp2_common/hardware_divider/: Makefile  cmake_install.cmake
code/cpp/pico-sdk/src/rp2_common/hardware_dma/: Makefile  cmake_install.cmake
code/cpp/pico-sdk/src/rp2_common/hardware_exception/: Makefile  cmake_install.cmake
code/cpp/pico-sdk/tools/: Makefile  cmake_install.cmake
figures/: Bode.eps  (+4 more)
lib/IMU/: CMakeLists.txt  IMU.h
(+569 files in other folders)
